--- a/package.json
+++ b/package.json
@@ -1,34 +1,36 @@
 {
-  "name": "pivot-typescript",
-  "version": "1.0.0",
-  "license": "MIT",
-  "repository": "https://github.com/flexmonster/pivot-typescript",
-  "main": "build/bundle.js",
-  "scripts": {
-    "build": "npm run clean-dist && webpack --config ./webpack.config.js",
-    "clean-dist": "rimraf dist/*",
-    "start": "npm run start-dev",
-    "start-dev": "webpack serve"
-  },
-  "dependencies": {
-    "flexmonster": "latest",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-flexmonster": "^2.9.3"
-  },
-  "devDependencies": {
-    "@types/react": "^17.0.15",
-    "@types/react-dom": "^17.0.9",
-    "@webpack-cli/serve": "^1.5.1",
-    "css-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.2",
-    "json-loader": "^0.5.7",
-    "style-loader": "^3.2.1",
-    "ts-loader": "^9.2.4",
-    "typescript": "^4.3.5",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.46.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
-  }
+    "name": "pivot-typescript",
+    "version": "1.0.0",
+    "license": "MIT",
+    "repository": "https://github.com/flexmonster/pivot-typescript",
+    "main": "build/bundle.js",
+    "scripts": {
+        "build": "npm run clean-dist && webpack --config ./webpack.config.js",
+        "clean-dist": "rimraf dist/*",
+        "start": "npm run start-dev",
+        "start-dev": "webpack serve",
+        "format": "npx prettier --write ."
+    },
+    "dependencies": {
+        "flexmonster": "latest",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-flexmonster": "^2.9.3"
+    },
+    "devDependencies": {
+        "@types/react": "^17.0.15",
+        "@types/react-dom": "^17.0.9",
+        "@webpack-cli/serve": "^1.5.1",
+        "css-loader": "^6.2.0",
+        "html-webpack-plugin": "^5.3.2",
+        "json-loader": "^0.5.7",
+        "prettier": "^2.3.2",
+        "style-loader": "^3.2.1",
+        "ts-loader": "^9.2.4",
+        "typescript": "^4.3.5",
+        "url-loader": "^4.1.1",
+        "webpack": "^5.46.0",
+        "webpack-cli": "^4.7.2",
+        "webpack-dev-server": "^3.11.2"
+    }
 }
