--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     },
     "dependencies": {
         "@types/flexmonster": "^2.7.15",
+        "@types/js-yaml": "^4.0.2",
         "@types/styled-jsx": "^2.2.9",
+        "copy-webpack-plugin": "^9.0.1",
         "flexmonster": "latest",
+        "js-yaml": "^4.1.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-flexmonster": "^2.9.3",
